--- a/bulma-extensions/switch.html
+++ b/bulma-extensions/switch.html
@@ -3,7 +3,7 @@ title: Switch
 layout: default
 doc-tab: bulma-extensions
 doc-subtab: switch
-npm-version: 0.0.1
+npm-version: 0.0.2
 variables:
 - name: $switch-background
   value: $grey-light
@@ -52,6 +52,33 @@ variables:
 <div class="field">
   <input id="switchColorInfo" type="checkbox" name="switchColorInfo" class="switch is-info" checked="checked">
   <label for="switchColorInfo">Switch info</label>
+</div>
+{% endcapture %}
+
+{% capture switch_thin_colors_example %}
+<div class="field">
+  <input id="switchThinColorDefault" type="checkbox" name="switchThinColorDefault" class="switch is-thin" checked="checked">
+  <label for="switchThinColorDefault">Switch default</label>
+</div>
+
+<div class="field">
+  <input id="switchThinColorSuccess" type="checkbox" name="switchThinColorSuccess" class="switch is-thin is-success" checked="checked">
+  <label for="switchThinColorSuccess">Switch success</label>
+</div>
+
+<div class="field">
+  <input id="switchThinColorWarning" type="checkbox" name="switchThinColorWarning" class="switch is-thin is-warning" checked="checked">
+  <label for="switchThinColorWarning">Switch warning</label>
+</div>
+
+<div class="field">
+  <input id="switchThinColorDanger" type="checkbox" name="switchThinColorDanger" class="switch is-thin is-danger" checked="checked">
+  <label for="switchThinColorDanger">Switch danger</label>
+</div>
+
+<div class="field">
+  <input id="switchThinColorInfo" type="checkbox" name="switchThinColorInfo" class="switch is-thin is-info" checked="checked">
+  <label for="switchThinColorInfo">Switch info</label>
 </div>
 {% endcapture %}
 
@@ -133,6 +160,31 @@ variables:
 <div class="field">
   <input id="switchRoundedOutlinedInfo" type="checkbox" name="switchRoundedOutlinedInfo" class="switch is-rounded is-outlined is-info" checked="checked">
   <label for="switchRoundedOutlinedInfo">Switch rounded outlined info</label>
+</div>
+
+<div class="field">
+  <input id="switchThinRoundedOutlinedDefault" type="checkbox" name="switchThinRoundedOutlinedDefault" class="switch is-thin is-rounded is-outlined" checked="checked">
+  <label for="switchThinRoundedOutlinedDefault">Switch Thin rounded outlined default</label>
+</div>
+
+<div class="field">
+  <input id="switchThinRoundedOutlinedSuccess" type="checkbox" name="switchThinRoundedOutlinedSuccess" class="switch is-thin is-rounded is-outlined is-success" checked="checked">
+  <label for="switchThinRoundedOutlinedSuccess">Switch Thin rounded outlined success</label>
+</div>
+
+<div class="field">
+  <input id="switchThinRoundedOutlinedWarning" type="checkbox" name="switchThinRoundedOutlinedWarning" class="switch is-thin is-rounded is-outlined is-warning" checked="checked">
+  <label for="switchThinRoundedOutlinedWarning">Switch Thin rounded outlined warning</label>
+</div>
+
+<div class="field">
+  <input id="switchThinRoundedOutlinedDanger" type="checkbox" name="switchThinRoundedOutlinedDanger" class="switch is-thin is-rounded is-outlined is-danger" checked="checked">
+  <label for="switchThinRoundedOutlinedDanger">Switch Thin rounded outlined danger</label>
+</div>
+
+<div class="field">
+  <input id="switchThinRoundedOutlinedInfo" type="checkbox" name="switchThinRoundedOutlinedInfo" class="switch is-thin is-rounded is-outlined is-info" checked="checked">
+  <label for="switchThinRoundedOutlinedInfo">Switch Thin rounded outlined info</label>
 </div>
 {% endcapture %}
 
@@ -268,6 +320,16 @@ variables:
     <hr>
 
     <h3 class="title">Styles</h3>
+    <h4 class="subtitle">Thin</h4>
+    <div class="columns">
+      <div class="column">
+        {{switch_thin_colors_example}}
+      </div>
+      <div class="column">
+        {% highlight html %}{{switch_thin_colors_example}}{% endhighlight %}
+      </div>
+    </div>
+
     <h4 class="subtitle">Rounded</h4>
     <div class="columns">
       <div class="column">
