Add pricing table variables

--- a/bulma-extensions/pricing-table.html
+++ b/bulma-extensions/pricing-table.html
@@ -9,6 +9,10 @@ variables:
   value: .1rem solid $white-ter
 - name: $pricing-plan-border-radius
   value: $radius
+- name: $pricing-plan-active-shadow
+  value: 0 8px 12px 0 rgba($grey, 0.2)
+- name: $pricing-plan-active-transform
+  value: scale(1.05)
 - name: $pricing-header-background
   value: $white
 - name: $pricing-item-background
