--- a/bulma-extensions/switch.html
+++ b/bulma-extensions/switch.html
@@ -3,7 +3,7 @@ title: Switch
 layout: default
 doc-tab: bulma-extensions
 doc-subtab: switch
-npm-version: 0.0.2
+npm-version: 0.0.3
 variables:
 - name: $switch-background
   value: $grey-light
@@ -25,6 +25,13 @@ variables:
 <div class="field">
   <input id="switchExample" type="checkbox" name="switchExample" class="switch" checked="checked">
   <label for="switchExample">Switch example</label>
+</div>
+{% endcapture %}
+
+{% capture switch_rtl_example %}
+<div class="field">
+  <input id="switchRtlExample" type="checkbox" name="switchRtlExample" class="switch is-rtl" checked="checked">
+  <label for="switchRtlExample">Switch example</label>
 </div>
 {% endcapture %}
 
@@ -286,6 +293,19 @@ variables:
         {% highlight html %}{{switch_example}}{% endhighlight %}
       </div>
     </div>
+
+    <hr>
+    <p>Use <code>is-rtl</code> to display a right-to-left design of checkbox (text at left)</p>
+    <br />
+    <div class="columns">
+      <div class="column">
+        {{switch_rtl_example}}
+      </div>
+      <div class="column">
+        {% highlight html %}{{switch_rtl_example}}{% endhighlight %}
+      </div>
+    </div>
+
 
     <div class="has-text-centered has-text-danegr">
       <p>Don't forget to set <code>id</code> attribute on input and <code>for</code> attribute on label with the same value to get it work. This will link the label to the checkbox and then handle the click.</p>
