--- a/bulma-extensions/steps.html
+++ b/bulma-extensions/steps.html
@@ -20,8 +20,8 @@ variables:
 ---
 
 {% capture steps_example %}
-<ul class="steps">
-  <li class="step-item is-completed is-success">
+<div class="steps">
+  <div class="step-item is-completed is-success">
     <div class="step-marker">
       <span class="icon">
         <i class="fa fa-check"></i>
@@ -31,22 +31,22 @@ variables:
       <p class="step-title">Step 1</p>
       <p>This is the first step of the process.</p>
     </div>
-  </li>
-  <li class="step-item is-active">
+  </div>
+  <div class="step-item is-active">
     <div class="step-marker"></div>
     <div class="step-content">
       <p class="step-title">Step 2</p>
       <p>This is the second step. You get here once you have completed the first step.</p>
     </div>
-  </li>
-  <li class="step-item">
+  </div>
+  <div class="step-item">
     <div class="step-marker">3</div>
     <div class="step-content">
       <p class="step-title">Step 3</p>
       <p>This is the third step. One more last before the end.</p>
     </div>
-  </li>
-  <li class="step-item">
+  </div>
+  <div class="step-item">
     <div class="step-marker">
       <span class="icon">
         <i class="fa fa-flag"></i>
@@ -56,8 +56,57 @@ variables:
       <p class="step-title">Step 4</p>
       <p>Final step. You have completed all the previous steps and end the process.</p>
     </div>
-  </li>
-</ul>
+  </div>
+</div>
+{% endcapture %}
+
+{% capture steps_js_example %}
+<div class="steps" id="stepsDemo">
+  <div class="step-item is-active is-success">
+    <div class="step-marker">
+      <span class="icon">
+        <i class="fa fa-check"></i>
+      </span>
+    </div>
+    <div class="step-content">
+      <p class="step-title">Step 1</p>
+      <p>This is the first step of the process.</p>
+    </div>
+  </div>
+  <div class="step-item">
+    <div class="step-marker"></div>
+    <div class="step-content">
+      <p class="step-title">Step 2</p>
+      <p>This is the second step. You get here once you have completed the first step.</p>
+    </div>
+  </div>
+  <div class="step-item">
+    <div class="step-marker">3</div>
+    <div class="step-content">
+      <p class="step-title">Step 3</p>
+      <p>This is the third step. One more last before the end.</p>
+    </div>
+  </div>
+  <div class="step-item">
+    <div class="step-marker">
+      <span class="icon">
+        <i class="fa fa-flag"></i>
+      </span>
+    </div>
+    <div class="step-content">
+      <p class="step-title">Step 4</p>
+      <p>Final step. You have completed all the previous steps and end the process.</p>
+    </div>
+  </div>
+  <div class="steps-actions">
+    <div class="steps-action">
+      <button data-nav="previous" class="button is-light">previous</button>
+    </div>
+    <div class="steps-action">
+      <button data-nav="next" class="button is-light">Next</button>
+    </div>
+  </div>
+</div>
 {% endcapture %}
 
 {% capture steps_sizes_example %}
@@ -251,8 +300,17 @@ variables:
       </div>
     </div>
 
+    {% include anchor.html name="Javascript" %}
+
+    <div class="bd-example">
+      {{steps_js_example}}
+    </div>
+    {% highlight html %}{{steps_js_example}}{% endhighlight %}
+
     {% include variables.html %}
 
     <p>Thanks to <a href="https://github.com/aramvisser/bulma-steps" tagret="_blank">aramvisser</a> for the <code>marker</code> name idea and for the sizes mixin declaration (which is smart).</p>
+
+    <script type="text/javascript" src="./js/steps.js"></script>
   </div>
 </section>
