Add JS info message

--- a/bulma-extensions/steps.html
+++ b/bulma-extensions/steps.html
@@ -302,6 +302,17 @@ variables:
 
     {% include anchor.html name="Javascript" %}
 
+    <div class="message is-info">
+      <h4 class="message-header">Javascript</h4>
+      <div class="message-body">
+        <div class="content">
+          <p>
+            The extension comes with a JavaScript implementation which manage steps navigation.
+          </p>
+        </div>
+      </div>
+    </div>
+
     <div class="bd-example">
       {{steps_js_example}}
     </div>
