Updat checkradio npm package

--- a/bulma-extensions/checkradio.html
+++ b/bulma-extensions/checkradio.html
@@ -3,12 +3,14 @@ title: Checkradio
 layout: default
 doc-tab: bulma-extensions
 doc-subtab: checkradio
-npm-version: 0.0.5
+npm-version: 0.0.6
 variables:
 - name: $checkbox-radius
   value: $radius
 - name: $checkbox-border
   value: .1rem solid $grey-light
+- name: $checkradio-focus-shadow
+  value: inset 0 2px 3px 0 rgba($grey-light, 0.2)
 ---
 
 {% capture checkradio_example %}
