Update checkradio doc

--- a/bulma-extensions/checkradio.html
+++ b/bulma-extensions/checkradio.html
@@ -9,8 +9,8 @@ variables:
   value: $radius
 - name: $checkbox-border
   value: .1rem solid $grey-light
-- name: $checkradio-focus-shadow
-  value: inset 0 2px 3px 0 rgba($grey-light, 0.2)
+- name: $checkradio-focus
+  value: 1px dotted $grey-light
 ---
 
 {% capture checkradio_example %}
