Add steps JS and CSS transitions

--- a/bulma-extensions/steps.html
+++ b/bulma-extensions/steps.html
@@ -27,21 +27,21 @@ variables:
         <i class="fa fa-check"></i>
       </span>
     </div>
-    <div class="step-content">
+    <div class="step-details">
       <p class="step-title">Step 1</p>
       <p>This is the first step of the process.</p>
     </div>
   </div>
   <div class="step-item is-active">
     <div class="step-marker"></div>
-    <div class="step-content">
+    <div class="step-details">
       <p class="step-title">Step 2</p>
       <p>This is the second step. You get here once you have completed the first step.</p>
     </div>
   </div>
   <div class="step-item">
     <div class="step-marker">3</div>
-    <div class="step-content">
+    <div class="step-details">
       <p class="step-title">Step 3</p>
       <p>This is the third step. One more last before the end.</p>
     </div>
@@ -52,7 +52,7 @@ variables:
         <i class="fa fa-flag"></i>
       </span>
     </div>
-    <div class="step-content">
+    <div class="step-details">
       <p class="step-title">Step 4</p>
       <p>Final step. You have completed all the previous steps and end the process.</p>
     </div>
@@ -68,21 +68,21 @@ variables:
         <i class="fa fa-check"></i>
       </span>
     </div>
-    <div class="step-content">
+    <div class="step-details">
       <p class="step-title">Step 1</p>
       <p>This is the first step of the process.</p>
     </div>
   </div>
   <div class="step-item">
     <div class="step-marker"></div>
-    <div class="step-content">
+    <div class="step-details">
       <p class="step-title">Step 2</p>
       <p>This is the second step. You get here once you have completed the first step.</p>
     </div>
   </div>
   <div class="step-item">
     <div class="step-marker">3</div>
-    <div class="step-content">
+    <div class="step-details">
       <p class="step-title">Step 3</p>
       <p>This is the third step. One more last before the end.</p>
     </div>
@@ -93,7 +93,7 @@ variables:
         <i class="fa fa-flag"></i>
       </span>
     </div>
-    <div class="step-content">
+    <div class="step-details">
       <p class="step-title">Step 4</p>
       <p>Final step. You have completed all the previous steps and end the process.</p>
     </div>
@@ -203,21 +203,21 @@ variables:
         <i class="fa fa-check"></i>
       </span>
     </div>
-    <div class="step-content is-primary is-completed">
+    <div class="step-details is-primary is-completed">
       <p class="step-title">Step 1</p>
       <p>This is the first step of the process.</p>
     </div>
   </li>
   <li class="step-item is-info is-completed">
     <div class="step-marker"></div>
-    <div class="step-content">
+    <div class="step-details">
       <p class="step-title">Step 2</p>
       <p>This is the second step. You get here once you have completed the first step.</p>
     </div>
   </li>
   <li class="step-item is-warning is-completed">
     <div class="step-marker">3</div>
-    <div class="step-content">
+    <div class="step-details">
       <p class="step-title">Step 3</p>
       <p>This is the third step. One more last before the end.</p>
     </div>
@@ -228,7 +228,7 @@ variables:
         <i class="fa fa-flag"></i>
       </span>
     </div>
-    <div class="step-content">
+    <div class="step-details">
       <p class="step-title">Step 4</p>
       <p>Final step. You have completed all the previous steps and end the process.</p>
     </div>
