Add Pageloader label

--- a/bulma-extensions/pageloader.html
+++ b/bulma-extensions/pageloader.html
@@ -10,7 +10,7 @@ variables:
 ---
 
 {% capture pageloader_example %}
-<div class="pageloader"></div>
+<div class="pageloader"><span class="title">Pageloader</span></div>
 {% endcapture %}
 
 {% include_relative subnav-bulma-extensions.html %}
@@ -64,7 +64,7 @@ variables:
 
     {% include variables.html %}
 
-    <div class="pageloader"></div>
+    <div class="pageloader"><span class="title">Pageloader</span></div>
   </div>
 </section>
 
