Update npm version for calendar

--- a/bulma-extensions/calendar.html
+++ b/bulma-extensions/calendar.html
@@ -3,7 +3,7 @@ title: Calendar
 layout: default
 doc-tab: bulma-extensions
 doc-subtab: calendar
-npm-version: 0.0.2
+npm-version: 0.0.3
 variables:
 - name: $calendar-border
   value: .1rem solid $grey-lighter
@@ -261,6 +261,7 @@ variables:
     {% highlight html %}{{calendar_datepicker_example}}{% endhighlight %}
 
     <div class="bd-example">
+      <h4 class="title is-4">Display calendar as overlay using <code>overlay: true</code> option</h4>
       {{calendar_datepicker_overlay_example}}
     </div>
     {% highlight html %}{{calendar_datepicker_overlay_example}}{% endhighlight %}
