--- a/bulma-extensions/checkradio.html
+++ b/bulma-extensions/checkradio.html
@@ -339,7 +339,7 @@ variables:
     </div>
 
     <hr>
-    <p>Use <code>is-rtl</code> to display a right-to-left design of ccheckbox or radio (text at left)</p>
+    <p>Use <code>is-rtl</code> to display a right-to-left design of checkbox or radio (text at left)</p>
     <br />
     <div class="columns">
       <div class="column">
@@ -356,7 +356,7 @@ variables:
     <br />
 
     <div class="notification is-warning has-text-centered">
-      <p>Please note that due to <strong>CSS limitation</strong> the structure of the checkbox is different of the one provided as exxample in Bulma's documentation.<br /><i>(Input is not wrapped by the label)</i></p>
+      <p>Please note that due to <strong>CSS limitation</strong> the structure of the checkbox is different of the one provided as example in Bulma's documentation.<br /><i>(Input is not wrapped by the label)</i></p>
     </div>
 
     {% include anchor.html name="Colors" %}
