--- a/bulma-extensions/tooltip.html
+++ b/bulma-extensions/tooltip.html
@@ -124,7 +124,7 @@ variables:
     </div>
 
     {% include anchor.html name="Sizes" %}
-    <h4 class="subtitle">You can force multine display by using <code>.is-tooltip-multiline</code> modifier.</h4>
+    <h4 class="subtitle">You can force multiline display by using <code>.is-tooltip-multiline</code> modifier.</h4>
     <div class="columns">
       <div class="column">
         {{tooltip_sizes_example}}
