--- a/bulma-extensions/overview.html
+++ b/bulma-extensions/overview.html
@@ -42,7 +42,7 @@ doc-subtab: overview
         <li>Clone the <a href="https://github.com/jgthms/bulma" target="_blank">bulma repo</a></li>
         <li>Under the <code>sass</code> folder, create a new folder called <code>extensions</code></li>
         <li>In this new folder, create a new file <code>switch.sass</code></li>
-        <li>Copy the code form the <code>bulma-switch repo</code>'s <a href="https://github.com/Wikiki/bulma-switch/blob/master/switch.sass" target="_blank">switch.sass</a> file into your new file</li>
+        <li>Copy the code from the <code>bulma-switch repo</code>'s <a href="https://github.com/Wikiki/bulma-switch/blob/master/switch.sass" target="_blank">switch.sass</a> file into your new file</li>
         <li>In the same folder create a new file <code>_all.sass</code> (this is not required, but will help when you add more extensions)</li>
         <li>In this file add this code:
 {% highlight sass %}
