Fix is-link button class

--- a/bulma-extensions/calendar.html
+++ b/bulma-extensions/calendar.html
@@ -3,7 +3,7 @@ title: Calendar
 layout: default
 doc-tab: bulma-extensions
 doc-subtab: calendar
-npm-version: 0.0.3
+npm-version: 0.0.4
 variables:
 - name: $calendar-border
   value: .1rem solid $grey-lighter
@@ -25,13 +25,13 @@ variables:
 <div class="calendar">
   <div class="calendar-nav">
     <div class="calendar-nav-left">
-      <button class="button is-link">
+      <button class="button is-text">
         <i class="fa fa-chevron-left"></i>
       </button>
     </div>
     <div>March 2017</div>
     <div class="calendar-nav-right">
-      <button class="button is-link">
+      <button class="button is-text">
         <i class="fa fa-chevron-right"></i>
       </button>
     </div>
@@ -91,13 +91,13 @@ variables:
 <div class="calendar is-large">
   <div class="calendar-nav">
     <div class="calendar-nav-left">
-      <button class="button is-link">
+      <button class="button is-text">
         <i class="fa fa-chevron-left"></i>
       </button>
     </div>
     <div>March 2017</div>
     <div class="calendar-nav-right">
-      <button class="button is-link">
+      <button class="button is-text">
         <i class="fa fa-chevron-right"></i>
       </button>
     </div>
