Update npm package version

--- a/bulma-extensions/overview.html
+++ b/bulma-extensions/overview.html
@@ -3,6 +3,7 @@ title: Overview
 layout: default
 doc-tab: bulma-extensions
 doc-subtab: overview
+npm-version: 0.0.4
 ---
 
 {% include_relative subnav-bulma-extensions.html %}
@@ -28,7 +29,7 @@ doc-subtab: overview
           <div class="control">
             <a class="tags has-addons" href="https://www.npmjs.com/package/bulma-extensions" target="_blank">
               <span class="tag">NPM Package</span>
-              <span class="tag is-success">0.0.1</span>
+              <span class="tag is-success">{{ page.npm-version }}</span>
             </a>
           </div>
         </div>
