--- a/bulma-extensions/slider.html
+++ b/bulma-extensions/slider.html
@@ -137,7 +137,7 @@ document.addEventListener( 'DOMContentLoaded', function () {
   [].forEach.call( sliders, function ( slider ) {
     var output = findOutputForSlider( slider );
     if ( output ) {
-      if ( event.target.classList.contains( 'has-output-tooltip' ) ) {
+      if ( slider.classList.contains( 'has-output-tooltip' ) ) {
         // Get new output position
         var newPosition = getSliderOutputPosition( slider );
 
