--- a/bulma-extensions/timeline.html
+++ b/bulma-extensions/timeline.html
@@ -3,7 +3,7 @@ title: Timeline
 layout: default
 doc-tab: bulma-extensions
 doc-subtab: timeline
-npm-version: 1.0.0
+npm-version: 1.0.3
 variables:
 - name: $timeline-marker-background-color
   value: $white
@@ -22,18 +22,18 @@ variables:
 ---
 
 {% capture timeline_example %}
-<ul class="timeline">
-  <li class="timeline-header">
+<div class="timeline">
+  <header class="timeline-header">
     <span class="tag is-medium is-primary">Start</span>
-  </li>
-  <li class="timeline-item">
+  </header>
+  <div class="timeline-item">
     <div class="timeline-marker"></div>
     <div class="timeline-content">
       <p class="heading">January 2016</p>
       <p>Timeline content - Can include any HTML element</p>
     </div>
-  </li>
-  <li class="timeline-item">
+  </div>
+  <div class="timeline-item">
     <div class="timeline-marker is-image is-32x32">
       <img src="http://bulma.io/images/placeholders/32x32.png">
     </div>
@@ -41,11 +41,11 @@ variables:
       <p class="heading">February 2016</p>
       <p>Timeline content - Can include any HTML element</p>
     </div>
-  </li>
-  <li class="timeline-header">
+  </div>
+  <header class="timeline-header">
     <span class="tag is-primary">2017</span>
-  </li>
-  <li class="timeline-item">
+  </header>
+  <div class="timeline-item">
     <div class="timeline-marker is-icon">
       <i class="fa fa-flag"></i>
     </div>
@@ -53,26 +53,26 @@ variables:
       <p class="heading">March 2017</p>
       <p>Timeline content - Can include any HTML element</p>
     </div>
-  </li>
-  <li class="timeline-header">
+  </div>
+  <div class="timeline-header">
     <span class="tag is-medium is-primary">End</span>
-  </li>
-</ul>
+  </div>
+</div>
 {% endcapture %}
 
 {% capture timeline_colors_example %}
-<ul class="timeline">
-  <li class="timeline-header">
+<div class="timeline">
+  <header class="timeline-header">
     <span class="tag is-medium is-primary">Start</span>
-  </li>
-  <li class="timeline-item">
+  </header>
+  <div class="timeline-item">
     <div class="timeline-marker is-primary"></div>
     <div class="timeline-content">
       <p class="heading">January 2016</p>
       <p>Timeline content - Can include any HTML element</p>
     </div>
-  </li>
-  <li class="timeline-item">
+  </div>
+  <div class="timeline-item">
     <div class="timeline-marker is-warning is-image is-32x32">
       <img src="http://bulma.io/images/placeholders/32x32.png">
     </div>
@@ -80,11 +80,11 @@ variables:
       <p class="heading">February 2016</p>
       <p>Timeline content - Can include any HTML element</p>
     </div>
-  </li>
-  <li class="timeline-header">
+  </div>
+  <header class="timeline-header">
     <span class="tag is-primary">2017</span>
-  </li>
-  <li class="timeline-item">
+  </header>
+  <div class="timeline-item">
     <div class="timeline-marker is-danger is-icon">
       <i class="fa fa-flag"></i>
     </div>
@@ -92,26 +92,26 @@ variables:
       <p class="heading">March 2017</p>
       <p>Timeline content - Can include any HTML element</p>
     </div>
-  </li>
-  <li class="timeline-header">
+  </div>
+  <header class="timeline-header">
     <span class="tag is-medium is-primary">End</span>
-  </li>
-</ul>
+  </header>
+</div>
 {% endcapture %}
 
 {% capture timeline_colors_line_example %}
-<ul class="timeline">
-  <li class="timeline-header">
+<div class="timeline">
+  <header class="timeline-header">
     <span class="tag is-medium is-primary">Start</span>
-  </li>
-  <li class="timeline-item is-primary">
+  </header>
+  <div class="timeline-item is-primary">
     <div class="timeline-marker"></div>
     <div class="timeline-content">
       <p class="heading">January 2016</p>
       <p>Timeline content - Can include any HTML element</p>
     </div>
-  </li>
-  <li class="timeline-item is-warning">
+  </div>
+  <div class="timeline-item is-warning">
     <div class="timeline-marker is-image is-32x32">
       <img src="http://bulma.io/images/placeholders/32x32.png">
     </div>
@@ -119,11 +119,11 @@ variables:
       <p class="heading">February 2016</p>
       <p>Timeline content - Can include any HTML element</p>
     </div>
-  </li>
-  <li class="timeline-header">
+  </div>
+  <header class="timeline-header">
     <span class="tag is-primary">2017</span>
-  </li>
-  <li class="timeline-item is-danger">
+  </header>
+  <div class="timeline-item is-danger">
     <div class="timeline-marker is-icon">
       <i class="fa fa-flag"></i>
     </div>
@@ -131,26 +131,26 @@ variables:
       <p class="heading">March 2017</p>
       <p>Timeline content - Can include any HTML element</p>
     </div>
-  </li>
-  <li class="timeline-header">
+  </div>
+  <header class="timeline-header">
     <span class="tag is-medium is-primary">End</span>
-  </li>
-</ul>
+  </header>
+</div>
 {% endcapture %}
 
 {% capture timeline_colors_both_example %}
-<ul class="timeline">
-  <li class="timeline-header">
+<div class="timeline">
+  <header class="timeline-header">
     <span class="tag is-medium is-primary">Start</span>
-  </li>
-  <li class="timeline-item is-primary">
+  </header>
+  <div class="timeline-item is-primary">
     <div class="timeline-marker is-primary"></div>
     <div class="timeline-content">
       <p class="heading">January 2016</p>
       <p>Timeline content - Can include any HTML element</p>
     </div>
-  </li>
-  <li class="timeline-item is-warning">
+  </div>
+  <div class="timeline-item is-warning">
     <div class="timeline-marker is-warning is-image is-32x32">
       <img src="http://bulma.io/images/placeholders/32x32.png">
     </div>
@@ -158,11 +158,11 @@ variables:
       <p class="heading">February 2016</p>
       <p>Timeline content - Can include any HTML element</p>
     </div>
-  </li>
-  <li class="timeline-header">
+  </div>
+  <header class="timeline-header">
     <span class="tag is-primary">2017</span>
-  </li>
-  <li class="timeline-item is-danger">
+  </header>
+  <div class="timeline-item is-danger">
     <div class="timeline-marker is-danger is-icon">
       <i class="fa fa-flag"></i>
     </div>
@@ -170,26 +170,26 @@ variables:
       <p class="heading">March 2017</p>
       <p>Timeline content - Can include any HTML element</p>
     </div>
-  </li>
-  <li class="timeline-header">
+  </div>
+  <header class="timeline-header">
     <span class="tag is-medium is-primary">End</span>
-  </li>
-</ul>
+  </header>
+</div>
 {% endcapture %}
 
 {% capture timeline_centered_example %}
-<ul class="timeline is-centered">
-  <li class="timeline-header">
+<div class="timeline is-centered">
+  <header class="timeline-header">
     <span class="tag is-medium is-primary">Start</span>
-  </li>
-  <li class="timeline-item is-primary">
+  </header>
+  <div class="timeline-item is-primary">
     <div class="timeline-marker is-primary"></div>
     <div class="timeline-content">
       <p class="heading">January 2016</p>
       <p>Timeline content - Can include any HTML element</p>
     </div>
-  </li>
-  <li class="timeline-item is-warning">
+  </div>
+  <div class="timeline-item is-warning">
     <div class="timeline-marker is-warning is-image is-32x32">
       <img src="http://bulma.io/images/placeholders/32x32.png">
     </div>
@@ -197,8 +197,8 @@ variables:
       <p class="heading">February 2016</p>
       <p>Timeline content - Can include any HTML element</p>
     </div>
-  </li>
-  <li class="timeline-item is-danger">
+  </div>
+  <div class="timeline-item is-danger">
     <div class="timeline-marker is-danger is-icon">
       <i class="fa fa-flag"></i>
     </div>
@@ -206,26 +206,26 @@ variables:
       <p class="heading">March 2017</p>
       <p>Timeline content - Can include any HTML element</p>
     </div>
-  </li>
-  <li class="timeline-header">
+  </div>
+  <header class="timeline-header">
     <span class="tag is-medium is-primary">End</span>
-  </li>
-</ul>
+  </header>
+</div>
 {% endcapture %}
 
 {% capture timeline_rtl_example %}
-<ul class="timeline is-rtl">
-  <li class="timeline-header">
+<div class="timeline is-rtl">
+  <header class="timeline-header">
     <span class="tag is-medium is-primary">Start</span>
-  </li>
-  <li class="timeline-item is-primary">
+  </header>
+  <div class="timeline-item is-primary">
     <div class="timeline-marker is-primary"></div>
     <div class="timeline-content">
       <p class="heading">January 2016</p>
       <p>Timeline content - Can include any HTML element</p>
     </div>
-  </li>
-  <li class="timeline-item is-warning">
+  </div>
+  <div class="timeline-item is-warning">
     <div class="timeline-marker is-warning is-image is-32x32">
       <img src="http://bulma.io/images/placeholders/32x32.png">
     </div>
@@ -233,11 +233,11 @@ variables:
       <p class="heading">February 2016</p>
       <p>Timeline content - Can include any HTML element</p>
     </div>
-  </li>
-  <li class="timeline-header">
+  </div>
+  <header class="timeline-header">
     <span class="tag is-primary">2017</span>
-  </li>
-  <li class="timeline-item is-danger">
+  </header>
+  <div class="timeline-item is-danger">
     <div class="timeline-marker is-danger is-icon">
       <i class="fa fa-flag"></i>
     </div>
@@ -245,11 +245,11 @@ variables:
       <p class="heading">March 2017</p>
       <p>Timeline content - Can include any HTML element</p>
     </div>
-  </li>
-  <li class="timeline-header">
+  </div>
+  <header class="timeline-header">
     <span class="tag is-medium is-primary">End</span>
-  </li>
-</ul>
+  </header>
+</div>
 {% endcapture %}
 
 {% include_relative subnav-bulma-extensions.html %}
