--- a/bulma-extensions/timeline.html
+++ b/bulma-extensions/timeline.html
@@ -198,6 +198,9 @@ variables:
       <p>Timeline content - Can include any HTML element</p>
     </div>
   </div>
+  <header class="timeline-header">
+    <span class="tag is-primary">2017</span>
+  </header>
   <div class="timeline-item is-danger">
     <div class="timeline-marker is-danger is-icon">
       <i class="fa fa-flag"></i>
