Add IconPicker Doc page

--- a/bulma-extensions/subnav-bulma-extensions.html
+++ b/bulma-extensions/subnav-bulma-extensions.html
@@ -16,6 +16,9 @@
       <a class="navbar-item is-tab {% if page.doc-subtab == 'divider' %}is-active{% endif %}" href="{{ site.url }}/bulma-extensions/divider">
         Divider
       </a>
+      <a class="navbar-item is-tab {% if page.doc-subtab == 'iconpicker' %}is-active{% endif %}" href="{{ site.url }}/bulma-extensions/iconpicker">
+        IconPicker
+      </a>
       <a class="navbar-item is-tab {% if page.doc-subtab == 'pageloader' %}is-active{% endif %}" href="{{ site.url }}/bulma-extensions/pageloader">
         Page-loader
       </a>
