Center iconPicker button

--- a/bulma-extensions/iconpicker.html
+++ b/bulma-extensions/iconpicker.html
@@ -71,7 +71,7 @@ iconPickerOptions = {
     <hr>
 
     <div class="columns">
-      <div class="column">
+      <div class="column has-text-centered">
         <input type="text" id="iconPicker" data-action="iconPicker" value="fa fa-icon fa-star" />
       </div>
       <div class="column">
