--- a/bulma-extensions/overview.html
+++ b/bulma-extensions/overview.html
@@ -13,7 +13,7 @@ npm-version: 0.0.4
     <div class="columns">
       <div class="column">
         <h1 class="title">Bulma-extensions</h1>
-        <h2 class="subtitle">Set of missing <a href="http://bulma.io" target="_blank">Bulma.io</a> functionnalities in form of extensions.</h2>
+        <h2 class="subtitle">Set of missing <a href="http://bulma.io" target="_blank">Bulma.io</a> functionalities in form of extensions.</h2>
       </div>
       <div class="column is-narrow">
         <div class="field is-grouped is-grouped-multiline">
