--- a/bulma-extensions/subnav-bulma-extensions.html
+++ b/bulma-extensions/subnav-bulma-extensions.html
@@ -4,6 +4,9 @@
       <a class="navbar-item is-tab {% if page.doc-subtab == 'overview' %}is-active{% endif %}" href="{{ site.url }}/bulma-extensions/overview">
         Overview
       </a>
+      <a class="navbar-item is-tab {% if page.doc-subtab == 'accordion' %}is-active{% endif %}" href="{{ site.url }}/bulma-extensions/accordion">
+        Accordion
+      </a>
       <a class="navbar-item is-tab {% if page.doc-subtab == 'badge' %}is-active{% endif %}" href="{{ site.url }}/bulma-extensions/badge">
         Badge
       </a>
