--- a/bulma-extensions/switch.html
+++ b/bulma-extensions/switch.html
@@ -313,7 +313,7 @@ variables:
     <br />
 
     <div class="notification is-warning has-text-centered">
-      <p>Please note that due to <strong>CSS limitation</strong> the structure of the checkbox is different of the one provided as exxample in Bulma's documentation.<br /><i>(Input is not wrapped by the label)</i></p>
+      <p>Please note that due to <strong>CSS limitation</strong> the structure of the checkbox is different of the one provided as example in Bulma's documentation.<br /><i>(Input is not wrapped by the label)</i></p>
     </div>
 
     {% include anchor.html name="Colors" %}
