--- a/bulma-extensions/iconpicker.html
+++ b/bulma-extensions/iconpicker.html
@@ -15,7 +15,7 @@ npm-version: 0.1.0
 {% endcapture %}
 
 {% capture iconpicker_js_customize %}
-iconPickerOptions = {
+let iconPickerOptions = {
   iconSets: [ {
     name: 'simpleLine', // Name displayed on tab
     css: 'https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.css', // CSS url containing icons rules
