--- a/bulma-extensions/overview.html
+++ b/bulma-extensions/overview.html
@@ -3,7 +3,7 @@ title: Overview
 layout: default
 doc-tab: bulma-extensions
 doc-subtab: overview
-npm-version: 0.0.4
+npm-version: 0.2.3
 ---
 
 {% include_relative subnav-bulma-extensions.html %}
@@ -162,7 +162,7 @@ sass bulma-pricingtable.sass
           </ul>
         </div>
         <p>Open your main application's sass file and add the following line:</p>
-        {% highlight bash %}@import @import "sass/extensions/_all"{% endhighlight %}
+        {% highlight bash %}@import "sass/extensions/_all"{% endhighlight %}
       </div>
     </article>
 
